...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--The Movies-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController title="The Movies" id="BYZ-38-t0r" customClass="MovieViewController" customModule="DCTheMovie" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" rowHeight="120" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0gg-tO-iKk">
                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
            <point key="canvasLocation" x="-1484" y="134"/>
        </scene>
        <!--Must Watch-->
        <scene sceneID="7Cs-Fg-CaY">
            <objects>
                <navigationController id="xMD-Ra-gde" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Must Watch" image="MyMovies" id="Nzp-4G-npZ"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="LNc-qo-Mpn">
                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="8Un-NR-Hb2" kind="relationship" relationship="rootViewController" id="toX-HR-f4E"/>
...
            <point key="canvasLocation" x="-2390" y="936"/>
        </scene>
        <!--About-->
        <scene sceneID="RZU-C7-TOh">
            <objects>
                <navigationController id="8qh-mL-Rpz" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="About" image="About" id="MFd-A7-Hgt"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="z9M-7t-Cun">
                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="sh3-1J-d0q" kind="relationship" relationship="rootViewController" id="1sK-eL-XJU"/>
...
            <point key="canvasLocation" x="-4223" y="937"/>
        </scene>
        <!--Watched-->
        <scene sceneID="30i-Js-XWW">
            <objects>
                <navigationController id="xou-Dp-RAE" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Watched" image="Watched" id="tQY-i4-ldS"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="tpa-i2-iMO">
                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="gIc-tA-HZy" kind="relationship" relationship="rootViewController" id="0fl-Bm-02G"/>
...
            </objects>
            <point key="canvasLocation" x="-2390" y="137"/>
        </scene>
        <!--Details-->
        <scene sceneID="VFx-5X-E3D">
            <objects>
                <viewController title="Details" hidesBottomBarWhenPushed="YES" id="mN7-Z7-rHY" customClass="MovieDetailsViewController" customModule="DCTheMovie" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" clipsSubviews="YES" contentMode="scaleToFill" id="5ve-mj-k9W">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ke0-zQ-j8G">
                                <rect key="frame" x="0.0" y="140" width="414" height="673"/>
...
