...
    func tableView(_ tableView: UITableView, canEditRowAt indexPath: IndexPath) -> Bool {
        return true
    }
    
    func tableView(_ tableView: UITableView, editActionsForRowAt indexPath: IndexPath) -> [UITableViewRowAction]? {
        
        let deleteAct = UITableViewRowAction(style: .destructive, title: "Remove") { (rowAction, index) in
            if let movie = self.myMoviesVM.movieAtIndex(indexPath.row) {
                // Remove movie from watched list
                self.myMoviesVM.removeMovie(movie)
                tableView.deleteRows(at: [indexPath], with: .automatic)
            }
        }
...
