...
                self.tblMovies.reloadData()
            }
        }
        
        self.searchController = UISearchController(searchResultsController:  nil)
        self.searchController.searchBar.delegate = self
        self.searchController.searchBar.placeholder = "search for zombies or movies"
        self.searchController.hidesNavigationBarDuringPresentation = true
        self.searchController.dimsBackgroundDuringPresentation = false

        self.definesPresentationContext = true
        
        if #available(iOS 11.0, *) {
...
